added few more posts/events and delteted while doing video presentation

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -53,7 +53,10 @@
     </div>
     <br />
     <div class="actions">
-      <%= f.submit "Register", data:{turbo: false}, style: "background-color: #39023A; color: #ffffff; padding: 8px 40px; text-decoration: none; border-radius: 8px; margin-top: 5%; float: left;" %>
+      <%= f.submit "Register", data:{turbo: false}, style: "background-color: #39023A; color: #ffffff; padding: 8px 40px; text-decoration: none; border-radius: 8px; margin: 3% 0% 10% 0%; float: left;" %>
     </div>
   <% end %>
+  <br />
+  <br />
+  <br />
 </div>
